--- a/about_us.html
+++ b/about_us.html
@@ -134,8 +134,8 @@
             <img src="img/personal.png" alt="image" style="width:35%">
             <div class="container">
                 <h2>Fawaz Muhammed</h2>
-                <p class="title">Firedata base</p>
-                <p>-----</p>
+                <p class="title">Firebase creater and programer</p>
+                <p></p>
                 <p>Fowazassiri@gmail.com</p>
                 <a href="mailto:Fowazassiri@gmail.com"><button class="button">Contact</button></a>
             </div>
