--- a/html_content_page.html
+++ b/html_content_page.html
@@ -487,43 +487,6 @@
 				height: 20px;
 				border-radius: 15px;
 			}
-			form.chat button{
-				position: absolute;
-				left: 225px;
-                top: 242px;
-				width: 120px; 
-				height: 120px;
-				cursor: pointer;
-				border-color: white;
-                border-radius: 15px;
-				border-style: solid ;
-				border-width: 3px;
-				background-color: limegreen;
-				background-image: url(img/chat.png);
-                background-size: 75px;
-                background-repeat: no-repeat;
-                background-position-x: center;
-				background-position-y: 10px;
-			}
-			form.chat button:hover{
-				background-color: green;
-			}
-			.chat_block{
-				background: white;
-				color: black;
-				position: absolute;
-				font-size: 12px;
-				font-weight: bold;
-				line-height: 15px;
-                vertical-align: baseline;
-                text-align: center;
-				left: 235px;
-				top: 335px;
-				width: 100px;
-				height: 20px;
-				border-radius: 15px;
-			/* all down is for tooltiptext */
-			}
 			.coursesline {
 				position: absolute;
 				left: 475px;
@@ -829,12 +792,8 @@
 			<button type="submit"> <i class="facebook"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="add" action="add.html" method="GET">
+		<form class="add" action="add-test.html" method="GET">
 			<button type="submit"> <i class="add"></i> </button>
-		</form>
-			<!---------------------------------->
-		<form class="chat" action="/action_page.php">
-			<button type="submit"> <i class="chat"></i> </button>
 		</form>
 			<!---------------------------------->
 		<form class="searchbox" action="/action_page.php">
@@ -867,7 +826,6 @@
 		</form>
 			<!---------------------------------->
 		<div class="add_block"> Add your content </div>
-		<div class="chat_block"> Order status </div>
 		<div class="coursesline"> ----------- <span class="tooltiptext"> Content </span> </div>
 		<div class="forumline"> ----------- <span class="tooltiptext"> Forums </span> </div>
 
