--- a/personal.html
+++ b/personal.html
@@ -497,7 +497,7 @@
 	 		background-color: black; 
      	  	}
     		.text {
-			color: red;
+			color: gold;
 			font-size: 18px;
 			font-weight: bold;
 			padding: 8px 12px;
@@ -765,10 +765,10 @@
 		<div class="line_small"> </div>
 		<div class="personal_information"> </div>
 		<div class="personal_information1"> </div>
-        <div class="personal_information2"> Name: ahmed amer </div>
-        <div class="personal_information3"> UserType: student </div>
-        <div class="personal_information4"> UserID: 17101998 </div>
-        <div class="personal_information5"> Major: computer science </div>
+        <div class="personal_information2">  </div>
+        <div class="personal_information3">  </div>
+        <div class="personal_information4">  </div>
+        <div class="personal_information5">  </div>
 		<div class="Announcement_back"> </div>
 		<div class="Announcement_front1"> </br> here will give you all importance news about this website </div>
 		<div class="Announcement_front2"> </br> Announcement </div>
@@ -805,7 +805,7 @@
 			<button type="submit"> <i class="add"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="favorite" action="favorite.html" method="GET">
+		<form class="favorite" action="Nothing to see" method="GET">
 			<button type="submit"> <i class="del"></i> </button>
 		</form>
 			<!---------------------------------->
