--- a/supervisor_page.html
+++ b/supervisor_page.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="ScrollBar.css">
-		<style>			
+		<style>
 			body{
-				background-color: black;
+				background-color: gainsboro;
 				background-image: url(img/original_kku.jpeg);
-				background-repeat: initial;
+				background-repeat: no-repeat;
 				background-attachment: scroll;
 				background-size: cover;
 				background-position-y: 210px;
@@ -107,15 +107,149 @@
 				-moz-border-radius: 0 15px 15px 0;
                 -webkit-border-radius: 0 15px 15px 0;
 			}
+			.lines_big{
+				background: limegreen;
+				position: absolute;
+				left: 0px;
+				top: 100px;
+				width: 1004px; 
+				height: 200px;
+				border-color: white;
+				border-style: solid ;
+				border-width: 4px;
+			}
 			.line_small{
 				background: white;
 				position: absolute;
 				right: 0px;
 				top: 100px;
-				width: 1257px; 
+				width: 400px; 
 				border-color: white;
 				border-style: solid ;
 				border-width: 2px; 
+			}
+			.personal_information{
+				background: grey;
+				position: absolute;
+				right: 1px;
+				top: 104px;
+				width: 250px;
+				height: 375px;
+				border-radius: 0 0px 15px 15px;
+			}
+			.personal_information1{
+				background: white;
+				color: black;
+				position: absolute;
+				font-size: 15px;
+				font-weight: bold;
+				line-height: 30px;
+                vertical-align: baseline;
+                text-align: center;
+				right: 45px;
+				top: 115px;
+				width: 160px;
+				height: 160px;
+				border-radius: 100px;
+			}
+            .personal_information2{
+				background: white;
+				color: black;
+				position: absolute;
+				font-size: 15px;
+				font-weight: bold;
+				line-height: 30px;
+                vertical-align: baseline;
+                text-align: left;
+				right: 25px;
+				top: 290px;
+				width: 200px;
+				height: 35px;
+				border-radius: 15px;
+			}
+            .personal_information3{
+				background: white;
+				color: black;
+				position: absolute;
+				font-size: 15px;
+				font-weight: bold;
+				line-height: 30px;
+                vertical-align: baseline;
+                text-align: left;
+				right: 25px;
+				top: 340px;
+				width: 200px;
+				height: 35px;
+				border-radius: 15px;
+			}
+            .personal_information4{
+				background: white;
+				color: black;
+				position: absolute;
+				font-size: 15px;
+				font-weight: bold;
+				line-height: 30px;
+                vertical-align: baseline;
+                text-align: left;
+				right: 25px;
+				top: 390px;
+				width: 200px;
+				height: 35px;
+				border-radius: 15px;
+			}
+            .personal_information5{
+				background: white;
+				color: black;
+				position: absolute;
+				font-size: 15px;
+				font-weight: bold;
+				line-height: 30px;
+                vertical-align: baseline;
+                text-align: left;
+				right: 25px;
+				top: 440px;
+				width: 200px;
+				height: 35px;
+				border-radius: 15px;
+			}
+			.Announcement_back{
+				background: grey;
+				position: absolute;
+				right: 1px;
+				top: 500px;
+				width: 250px;
+				height: 210px;
+				border-radius: 15px;
+			}
+			.Announcement_front1{
+				background: white;
+				color: black;
+				position: absolute;
+				font-size: 17px;
+				font-weight: bold;
+				line-height: 20px;
+                vertical-align: baseline;
+                text-align: center;
+				right: 15px;
+				top: 575px;
+				width: 220px;
+				height: 125px;
+				border-radius: 15px;
+			}
+			.Announcement_front2{
+				background: white;
+				color: black;
+				position: absolute;
+				font-size: 17px;
+				font-weight: bold;
+				line-height: 20px;
+                vertical-align: baseline;
+                text-align: center;
+				right: 15px;
+				top: 510px;
+				width: 220px;
+				height: 50px;
+				border-radius: 15px;
 			}
 			form.home button{
 				background-color: black;
@@ -169,6 +303,7 @@
                 border-radius: 17px;
 				border-style: solid;
 				border-width: 2px;
+				text-decoration: none;
 			}
 			.accounts{
 				background: white;
@@ -255,10 +390,10 @@
                 background-repeat: no-repeat;
                 background-position: center;	
 			}
-			form.Computer_science button{
+			form.check button{
 				position: absolute;
 				left: 50px;
-                top: 135px;
+                top: 337px;
 				width: 120px; 
 				height: 120px;
 				cursor: pointer;
@@ -267,66 +402,91 @@
 				border-style: solid ;
 				border-width: 3px;
 				background-color: limegreen;
-				background-image: url(img/Computer_science.png);
+				background-image: url(img/check.png);
                 background-size: 75px;
                 background-repeat: no-repeat;
                 background-position-x: center;
 				background-position-y: 10px;
 			}
-			form.Computer_science button:hover{
+			form.check button:hover{
 				background-color: green;
 			}
-			.Computer_science_block{
+			.check_block{
 				background: white;
 				color: black;
 				position: absolute;
-				font-size: 12px;
+				font-size: 15px;
 				font-weight: bold;
-				line-height: 15px;
+				line-height: 10px;
                 vertical-align: baseline;
                 text-align: center;
 				left: 60px;
-				top: 228px;
+				top: 430px;
 				width: 100px;
 				height: 20px;
 				border-radius: 15px;
 			}
-			form.Information_system button{
+			marquee{
 				position: absolute;
-				left: 225px;
-                top: 135px;
-				width: 120px; 
-				height: 120px;
-				cursor: pointer;
-				border-color: white;
-                border-radius: 15px;
-				border-style: solid ;
-				border-width: 3px;
-				background-color: limegreen;
-				background-image: url(img/Information_system.png);
-                background-size: 75px;
-                background-repeat: no-repeat;
-                background-position-x: center;
-				background-position-y: 10px;
+				top: 120px;
+				left: 375px;
 			}
-			form.Information_system button:hover{
-				background-color: green;
+			.mySlides {display: none}
+			img {vertical-align: middle;}
+			.slideshow-container {
+			max-width: 345px;
+			position: relative;
+			top: 75px;
+			left: 10px;
+		    }
+		    .last, .next {
+			cursor: pointer;
+			position: absolute;
+			top: 50%;
+			width: auto;
+			padding: 16px;
+			margin-top: -22px;
+			color: white;
+			font-weight: bold;
+			font-size: 18px;
+			transition: 0.6s ease;
+			border-radius: 0 3px 3px 0;
+			user-select: none;
+		    }
+			.next {
+			right: 0;
+			border-radius: 3px 0 0 3px;
+		    }
+     		.last:hover, .next:hover {
+	 		background-color: black; 
+     	  	}
+    		.text {
+			color: red;
+			font-size: 18px;
+			font-weight: bold;
+			padding: 8px 12px;
+			position: absolute;
+			bottom: 10px;
+			width: 100%;
+			text-align: left;
+	     	}
+			.fade {
+			-webkit-animation-name: fade;
+			-webkit-animation-duration: 1.5s;
+			animation-name: fade;
+			animation-duration: 1.5s;
 			}
-			.Information_system_block{
-				background: white;
-				color: black;
-				position: absolute;
-				font-size: 12px;
-				font-weight: bold;
-				line-height: 15px;
-                vertical-align: baseline;
-                text-align: center;
-				left: 235px;
-				top: 228px;
-				width: 100px;
-				height: 20px;
-				border-radius: 15px;
-            }
+			@-webkit-keyframes fade {
+			from {opacity: .4} 
+			to {opacity: 1}
+			}
+			@keyframes fade {
+			from {opacity: .4} 
+			to {opacity: 1}
+			}
+			@media only screen and (max-width: 300px) {
+			.last, .next,.text {font-size: 11px}
+			}
 			/*dark mode start here*/
 			.dm{
 				color: white;
@@ -338,7 +498,7 @@
 			.dark-mode {
 				background-color: gainsboro;
 				background-image: url(img/black_kku.jpeg);
-				background-repeat: initial;
+				background-repeat: no-repeat;
 				background-attachment: scroll;
 				background-size: cover;
 				background-position-y: 210px;
@@ -443,6 +603,101 @@
 			to{ bottom:0; opacity:1 }
 			}
 			/*----- end here -----*/
+			/*-- this for alert start here --*/
+			.alert {
+				background-color: red;
+				color: white;
+				position: absolute;
+				top: 180px;
+				left: 375px;
+				padding: 40px;
+				border-radius: 15px;
+				border-color: white;
+				border-style: double;
+				border-width: 5px;
+				font-size: 20px;
+			}
+			.closeb {
+				color: white;
+				font-weight: bold;
+				float: right;
+				font-size: 35px;
+				line-height: 20px;
+				cursor: pointer;
+				transition: 0.5s;
+			}
+			.closeb:hover {
+  				color: black;
+			}
+			#showme {
+				animation: dothings 0s 5s forwards;
+				visibility: hidden;
+			}
+			@keyframes dothings {
+				to{visibility: visible;}
+			}
+			/*-- this for alert ends here --*/
+			/*-- this for logout --*/
+			form.logout button{
+				position: absolute;
+				top: 13px;
+				left: 940px;
+				width: 70px;
+				height: 70px;
+				border-style: none none inset;
+				border-color: limegreen;
+				background-color: limegreen;
+				background-position: center;
+				background-repeat: no-repeat;
+				background-image: url(img/out.png);
+				background-size: 60px;
+				cursor: pointer;
+			}
+			/*-- this for logout --*/
+			.noftaction{
+				position: absolute;
+				top: 13px;
+				left: 760px;
+				width: 70px;
+				height: 70px;
+				border-style: none none inset;
+				border-color: limegreen;
+				background-color: limegreen;
+				background-position: center;
+				background-repeat: no-repeat;
+				background-image: url(img/bell.png);
+				background-size: 60px;
+				cursor: pointer;
+				float: right;
+			}
+			#noftaction2{
+				background-color: goldenrod;
+				color: white;
+				width: 150px;
+				height: 300px;
+				position: absolute;
+				top: 70px;
+				left: 0px;
+				border-radius: 15px;
+				border-color: white;
+				border-style: double;
+				border-width: 5px;
+				font-size: 20px;
+				text-align: center;
+				display: none;
+				overflow: auto;
+			}
+			#noftaction3{
+				background-color: red;
+				color: white;
+				width: 25px;
+				height: 25px;
+				position: absolute;
+				border-radius: 30px;
+				font-size: 20px;
+				text-align: center;
+				float: right;
+			}
 		</style>
 	</head>
 	<body onload="myFunction()" style="margin:0;">
@@ -457,27 +712,47 @@
 		}
 		</script>
 		<script>
+			
+		</script>
+		<script>
 		function mydark() {
 			var element = document.body;
 			element.classList.toggle("dark-mode");
 		}
 		</script>
+		
 		<div class="green_block"> </div>
 		<div class="green_block_down"> </div>
 		<div class="img_kku"> <img src="img/KKU.png", width="123px" height="100px" alt="img for KKU"> </div>
-		<div class="boxoftitle"> All content page </div>
+		<div class="boxoftitle"> Supervisor personal page </div>
 		<div class="lines_big"> </div>
 		<div class="line_small"> </div>
+		<div class="personal_information"> </div>
+		<div class="personal_information1"> </div>
+        <div class="personal_information2">  </div>
+        <div class="personal_information3">  </div>
+        <div class="personal_information4">  </div>
+        <div class="personal_information5">  </div>
+		<div class="Announcement_back"> </div>
+		<div class="Announcement_front1"> </br> here will give you all importance news about this website </div>
+		<div class="Announcement_front2"> </br> Announcement </div>
 		<div class="gmail">Our e-mail is: <a href="mailto:forproject1998@gmail.com">forproject1998@gmail.com</a></div>
 		<div class="location"> KSA - Asiri region - Abha city - qurayqar </div>
 		<div class="accounts"> Our social media accounts: </div>
+
+		<marquee direction="left" width="620" height="50" style="border-radius: 17px; font-size: 18pt; color: white; border-style: ridge; border-color: white" bgcolor="#808080" scrolldelay="80" scrollamount="3"> 
+			<a> hello everyone welcome to new unique experience </a> 
+			<a> ----------------------------------------------- </a> 
+			<a> to contact us all contact ways are in below of all pages to be easy for you </a>
+		</marquee>
+
 		<div class="dm"> Dark-mode </div>
 		<label class="switch">
 			<input type="checkbox"onclick="mydark()">
 			<span class="slider round"> </span>
 		</label>
 
-		    <!--All in below will use database-->
+		    <!--All in below will use database-->		
 		<form class="youtube" action="https://www.youtube.com/channel/UC_3gfuooYibe9HNHIzOhkoA" method="GET">
 			<button type="submit"> <i class="youtube"></i> </button>
 		</form>
@@ -490,12 +765,8 @@
 			<button type="submit"> <i class="facebook"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="Computer_science" action="cart-test.html" method="GET">
-			<button type="submit"> <i class="Computer science"></i> </button>
-		</form>
-			<!---------------------------------->
-		<form class="Information_system" action="/action_page.php">
-			<button type="submit"> <i class="Information system"></i> </button>
+		<form class="check" action="check_superv.html" method="GET">
+			<button type="submit"> <i class="check"></i> </button>
 		</form>
 			<!---------------------------------->
 		<form class="searchbox" action="/action_page.php">
@@ -503,7 +774,7 @@
 			<button type="submit"> <i class="searchbox"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="home" action="html_content_page.html" method="GET">
+		<form class="home" action="/action_page.php">
 			<button type="submit"> <i class="home"></i> Home </button>
 		</form>
 		    <!---------------------------------->
@@ -511,7 +782,102 @@
 			<button type="submit"> <i class="about_us"></i> About us </button>
 		</form>
 			<!---------------------------------->
-		<div class="Computer_science_block"> Computer science </div>
-		<div class="Information_system_block"> Inf-system </div>
+		<div class="check_block"> Check content </div>
+		<div class="slideshow-container">
+			<div class="mySlides fade">
+			  <img src="img/kku3.jpg" style="width:100%">
+			  <div class="text"> King Khalid University </div>
+			</div>	
+			<div class="mySlides fade">
+			  <img src="img/kku3.jpg" style="width:100%">
+			  <div class="text"> KKU </div>
+			</div>
+			<div class="mySlides fade">
+			  <img src="img/KKU3.jpg" style="width:100%">
+			  <div class="text"> Welcome to new experience </div>
+			</div>
+			<a class="last" onclick="plusSlides(-1)">&#10094;</a>
+			<a class="next" onclick="plusSlides(1)">&#10095;</a>
+			</div>
+			<br>
+			<div style="text-align:center">
+			  <span class="dot" onclick="currentSlide(1)"></span> 
+			  <span class="dot" onclick="currentSlide(2)"></span> 
+			  <span class="dot" onclick="currentSlide(3)"></span> 
+			</div>
+			<!-- this for alert start here -->
+			<div class="alert" id="showme">
+				<span class="closeb" onclick="this.parentElement.style.display='none';">&times;</span> 
+				Please pay attention there is an upcoming page update on 10/10
+			</div>
+			<!-- this for alert ends here -->
+			<form class="logout" action="login_user.html" method="GET">
+				<button type="submit"> <i class="logout"></i> </button>
+			</form>
+				<!---------------------------------->	
+			
+			<script>
+			var slideIndex = 1;
+			showSlides(slideIndex);
+			function plusSlides(n) {
+			  showSlides(slideIndex += n);
+			}
+			function currentSlide(n) {
+			  showSlides(slideIndex = n);
+			}
+			function showSlides(n) {
+			  var i;
+			  var slides = document.getElementsByClassName("mySlides");
+			  var dots = document.getElementsByClassName("dot");
+			  if (n > slides.length) {slideIndex = 1}    
+			  if (n < 1) {slideIndex = slides.length}
+			  for (i = 0; i < slides.length; i++) {
+				  slides[i].style.display = "none";  
+			  }
+			  for (i = 0; i < dots.length; i++) {
+				  dots[i].className = dots[i].className.replace(" active", "");
+			  }
+			  slides[slideIndex-1].style.display = "block";  
+			  dots[slideIndex-1].className += " active";
+			}
+			</script>
+			
+			<!-- all this for noftaction -->
+			<div class="noftaction" onclick="show_hide(), show_hide1()"> 
+				<div id="noftaction3"> 2 </div>
+				<div id="noftaction2"> 
+                      this all for test noftaction it no true have nice day.
+                </br> 
+                </br> 123 test test 123
+				</div>
+			</div>
+
+			<script>
+				var a;
+				function show_hide(){
+					if(a==1){
+					document.getElementById("noftaction2").style.display="block";
+					return a=0;
+					}
+					else{
+					document.getElementById("noftaction2").style.display="none";
+					return a=1;
+					}
+				}
+				</script>
+				<script>
+				var b;
+				function show_hide1(){
+					if(b==1){
+					document.getElementById("noftaction3").style.display="none";
+					return b=0;
+					}
+					else{
+					document.getElementById("noftaction3").style.display="none";
+					return b=1;
+					}
+				}
+					</script>
+			<!-- to here is for noftaction -->
 	</body>
 </html>
