--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title> </title>
+	<title>Assistant academic educational site</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
