--- a/html_content_page.html
+++ b/html_content_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Assistant academic educational site</title>
 		<link rel="stylesheet" href="ScrollBar.css">
 		<style>
 			body{
@@ -792,7 +793,7 @@
 			<button type="submit"> <i class="facebook"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="add" action="add-test.html" method="GET">
+		<form class="add" action="add_content.html" method="GET">
 			<button type="submit"> <i class="add"></i> </button>
 		</form>
 			<!---------------------------------->
@@ -809,7 +810,7 @@
 			<button type="submit"> <i class="about_us"></i> About us </button>
 		</form>
 			<!---------------------------------->
-		<form class="courses" action="content_user.html" method="GET">
+		<form class="courses" action="content_user_ISM362.html" method="GET">
 			<button type="submit"> <i class="courses"></i> </button>
 		</form>
 			<!---------------------------------->
