--- a/login_supervisor.html
+++ b/login_supervisor.html
@@ -277,7 +277,7 @@
 
             <!--Add here function after press user login transtion to new page -->
             <div id="user_div">
-                <form class="Continue" action="check_superv.html" method="GET">
+                <form class="Continue" action="supervisor_page.html" method="GET">
                     <button type="submit"> <i class="Continue"></i> Continue </button>
                  </form>
                     <button class="Logout"  onclick="logout()">Logout</button>
