--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>Create account page</title>
+        <title>Assistant academic educational site</title>
         <meta name="description" content="Assistant academic educational site or AAES is right way to success"/>
         <style>
             body{
