--- a/supervisor_page.html
+++ b/supervisor_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Assistant academic educational site</title>
 		<link rel="stylesheet" href="ScrollBar.css">
 		<style>
 			body{
@@ -765,7 +766,7 @@
 			<button type="submit"> <i class="facebook"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="check" action="check_superv.html" method="GET">
+		<form class="check" action="major_page_super.html" method="GET">
 			<button type="submit"> <i class="check"></i> </button>
 		</form>
 			<!---------------------------------->
@@ -811,7 +812,7 @@
 				Please pay attention there is an upcoming page update on 10/10
 			</div>
 			<!-- this for alert ends here -->
-			<form class="logout" action="login_user.html" method="GET">
+			<form class="logout" action="login_supervisor.html" method="GET">
 				<button type="submit"> <i class="logout"></i> </button>
 			</form>
 				<!---------------------------------->	
