--- a/reset_user.html
+++ b/reset_user.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <title>Reset password</title>
+        <title>Assistant academic educational site</title>
         <meta name="description" content="Assistant academic educational site or AAES is right way to success"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
