--- a/video_html.html
+++ b/video_html.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Assistant academic educational site</title>
 		<link rel="stylesheet" href="ScrollBar.css">
 		<style>
 			body{
