--- a/major_page_user.html
+++ b/major_page_user.html
@@ -491,7 +491,7 @@
 			<button type="submit"> <i class="facebook"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="Computer_science" action="cart-test.html" method="GET">
+		<form class="Computer_science" action="Adding-to-fav.html" method="GET">
 			<button type="submit"> <i class="Computer science"></i> </button>
 		</form>
 			<!---------------------------------->
