--- a/personal.html
+++ b/personal.html
@@ -806,7 +806,7 @@
 			<button type="submit"> <i class="add"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="favorite" action="Nothing to see" method="GET">
+		<form class="favorite" action="Favorite.html" method="GET">
 			<button type="submit"> <i class="del"></i> </button>
 		</form>
 			<!---------------------------------->
