--- a/html_content_page.html
+++ b/html_content_page.html
@@ -793,7 +793,7 @@
 			<button type="submit"> <i class="facebook"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="add" action="add_content.html" method="GET">
+		<form class="add" action="add_content_ISM362.html" method="GET">
 			<button type="submit"> <i class="add"></i> </button>
 		</form>
 			<!---------------------------------->
@@ -802,7 +802,7 @@
 			<button type="submit"> <i class="searchbox"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="home" action="html_content_page.html" method="GET">
+		<form class="home" action="Home-page.html" method="GET">
 			<button type="submit"> <i class="home"></i> Home </button>
 		</form>
 		    <!---------------------------------->
