--- a/login_supervisor.html
+++ b/login_supervisor.html
@@ -271,7 +271,7 @@
                 <button class="Login" onclick="login()">Login</button></br><p> </p><!--here end-->
                 <span class="Forgot"> <a href="reset_supervisor.html" onclick="forgotPass()">Forgot Password?</a> </span>
             </br><p> </p>
-            <span class="singup"> <a href="login_user.html">Login for users?</a> </span>
+            <span class="singup"> <a href="login_user.html">Login user</a> </span>
             </div>
 
 
