--- a/major_page_user.html
+++ b/major_page_user.html
@@ -491,7 +491,7 @@
 			<button type="submit"> <i class="facebook"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="Computer_science" action="Adding-to-fav.html" method="GET">
+		<form class="Computer_science" action="cs_courses_user.html" method="GET">
 			<button type="submit"> <i class="Computer science"></i> </button>
 		</form>
 			<!---------------------------------->
@@ -504,7 +504,7 @@
 			<button type="submit"> <i class="searchbox"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="home" action="html_content_page.html" method="GET">
+		<form class="home" action="Home-page.html" method="GET">
 			<button type="submit"> <i class="home"></i> Home </button>
 		</form>
 		    <!---------------------------------->
