--- a/supervisor_page.html
+++ b/supervisor_page.html
@@ -775,7 +775,7 @@
 			<button type="submit"> <i class="searchbox"></i> </button>
 		</form>
 			<!---------------------------------->
-		<form class="home" action="/action_page.php">
+		<form class="home" action="Home-page.html">
 			<button type="submit"> <i class="home"></i> Home </button>
 		</form>
 		    <!---------------------------------->
