--- a/Home-page.html
+++ b/Home-page.html
@@ -215,7 +215,7 @@
 			<button type="submit"> <i class="create"></i>Create account</button>
 		</form>
 			<!---------------------------------->
-		<form class="information" action="Project-2 presentation.pptx" target="_blank" method="get">
+		<form class="information" action="/other/Project-2 presentation.pptx" target="_blank" method="get">
 			<button type="submit"> <i class="information"></i>More about site</button>
 		</form>
 			<!---------------------------------->
