--- a/Add-fav-csm352.html
+++ b/Add-fav-csm352.html
@@ -14,9 +14,29 @@
           display: inline-block;
           width: 100px;
         }
+        form.forum button{
+          position: absolute;
+          left: 740px;
+          top: 240px;
+          width: 150px; 
+          height: 50px;
+          cursor: pointer;
+          border-color: white;
+          border-radius: 15px;
+          border-style: solid ;
+          border-width: 3px;
+          background-color: goldenrod;
+          color: white;
+          font-size: medium;
+          font-weight: bold;
+          text-align: center;
+			  }
+        form.forum button:hover{
+          background-color: darkgoldenrod;
+        }
         form.fav button{
           position: absolute;
-          left: 480px;
+          left: 380px;
           top: 240px;
           width: 150px; 
           height: 50px;
@@ -31,12 +51,12 @@
           font-weight: bold;
           text-align: center;
 			  }
-        form.fav button :hover{
+        form.fav button:hover{
           background-color: darkblue;
         }
         form.GoAddBtn button{
           position: absolute;
-          left: 640px;
+          left: 558px;
           top: 240px;
           width: 150px; 
           height: 50px;
@@ -51,7 +71,7 @@
           font-weight: bold;
           text-align: center;
         }
-        form.GoAddBtn button :hover{
+        form.GoAddBtn button:hover{
           background-color: darkgreen;
         }
     </style>
@@ -261,10 +281,13 @@ window.onload = Select_AllData;
     </form>
     <!---------------------------------->
     <form class="GoAddBtn" action="add_content_CSM352.html" method="GET">
-      <button type="submit"> <i class="fav"></i>Add  a content</button>
+      <button type="submit"> <i class="GoAddBtn"></i>Add  a content</button>
     </form>
     <!---------------------------------->
-    
+    <form class="forum" action="still in development" method="GET">
+      <button type="submit"> <i class="forum"></i>Forum of course</button>
+    </form>
+    <!---------------------------------->
     <script>
       function mydark() {
           var element = document.body;
