--- a/Add-fav-csm352.html
+++ b/Add-fav-csm352.html
@@ -281,13 +281,13 @@ window.onload = Select_AllData;
     </form>
     <!---------------------------------->
     <form class="GoAddBtn" action="add_content_CSM352.html" method="GET">
-      <button type="submit"> <i class="GoAddBtn"></i>Add  a content</button>
+      <button type="submit"> <i class="GoAddBtn"></i>Add a content</button>
     </form>
     <!---------------------------------->
     <form class="forum" action="still in development" method="GET">
       <button type="submit"> <i class="forum"></i>Forum of course</button>
     </form>
-    <!---------------------------------->
+    </form>
     <script>
       function mydark() {
           var element = document.body;
