--- a/add_content_ISM362.html
+++ b/add_content_ISM362.html
@@ -417,17 +417,17 @@
             }
 			p{
 				position: absolute;
-                top: 500px;
-                left: 250px;
-				color: red;
+                top: 550px;
+                left: 75px;
+				color: black;
 				font-size: medium;
 				font-weight: bold;
 				font-style: normal;
 			}
 			form.link button{
 				position: absolute;
-                top: 500px;
-                left: 737px;
+                top: 600px;
+                left: 75px;
                 color: white;
                 background-color: limegreen;
 				background-image: url(img/convert.png);
@@ -469,7 +469,7 @@
             .text1{
                 position: absolute;
                 left: 50px;
-                top: 135px;
+                top: 200px;
                 color: blue;
                 resize: none;
                 outline-color: blue;
@@ -484,7 +484,7 @@
             .text2{
                 position: absolute;
                 left: 50px;
-                top: 260px;
+                top: 300px;
                 color: blue;
                 resize: none;
                 outline-color: blue;
@@ -499,7 +499,7 @@
 			.text3{
 				position: absolute;
                 left: 50px;
-                top: 385px;
+                top: 400px;
                 color: blue;
                 resize: none;
                 outline-color: blue;
@@ -510,16 +510,6 @@
                 font-size: 15px;
                 width: 350px;
                 height: 70px;
-			}
-			.arrow{
-				border: solid red;
-				border-width: 0 3px 3px 0;
-				display: inline-block;
-				padding: 3px;
-			}
-			.right{
-				transform: rotate(-45deg);
-				-webkit-transform: rotate(-45deg);
 			}
             </style>
 
@@ -544,7 +534,7 @@
 		<div class="green_block"> </div>
 		<div class="green_block_down"> </div>
 		<div class="img_kku"> <img src="img/KKU.png", width="123px" height="100px" alt="img for KKU"> </div>
-		<div class="boxoftitle"> Suggesting page </div>
+		<div class="boxoftitle"> Add content for/ISM362 </div>
 		<div class="lines_big"> </div>
 		<div class="line_small"> </div>
 		<div class="gmail">Our e-mail is: <a href="mailto:forproject1998@gmail.com">forproject1998@gmail.com</a></div>
@@ -586,7 +576,7 @@
 		<input type="LinkTbox" class="text3" placeholder="Link this content" type="text" oninput="Update(this.value,'link')"><br><br>
         <hr>
         <button class="send" id="insertBtn">Upload link</button>
-		<P>If you have a file or photo please convert it to link by clicking here -<i class="arrow right"></i></P>
+		<P>If you have a file or photo please convert it to link by clicking below:-</P>
 		<form class="link" action="https://ar.imgbb.com/" target="_blank">
 			<button type="submit"> <i class="link"></i>Convert to</button>
 		</form>
