--- a/check_superv_ISM362.html
+++ b/check_superv_ISM362.html
@@ -55,6 +55,10 @@
 		<form class="links" action="https://ar.imgbb.com/" target="_blank">
 			<button type="submit"> <i class="links"></i>convert</button>
 		</form>
+        <!---------------------------------->
+        <form class="view" action="/content_user_ISM362.html" method="GET">
+        <button type="submit"> <i class="view"></i> View user page </button>
+        <!---------------------------------->
         <div class="more-space">this page is connect %99.9 in database</div>
         <div class="more-space">-------------------------------------------------------------</div>
 </div>
